recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:4: error: not found: value hanoi
  hanoi(height, src1, other, dst)
  ^