recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.code
def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
  
  hanoi(height, src1, other, dst)
  
}